# vegetable

./: 20230116_vegetable.ipynb  detect_abnormal weather.ipynb  pre.ipynb  predict.ipynb  predict.py  pyproject.toml  submission.csv  train_data_eda.ipynb  trend_analysis copy.ipynb  trend_analysis.ipynb  tutorial_41_yasai_1_preprocess copy.ipynb  tutorial_41_yasai_2_predict.ipynb  メモ.mkd  月の前半後半フラグ.ipynb
