[tool.poetry]
name = "vegetable"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.2"
ipykernel = "^6.19.4"
matplotlib = "^3.6.2"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.12.2"
sklearn = "^0.0.post1"
lightgbm = "^3.3.4"
statsmodels = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
